--- a/public/index.html
+++ b/public/index.html
@@ -1,32 +1,45 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <link rel="stylesheet" href="css/main.css"/>
+    <!--    <link rel="stylesheet" media="screen and (max-width: 1280px)" href="css/small_resolution.css" type="text/small-css">-->
     <meta charset="UTF-8">
     <title>FilterWeb</title>
 </head>
 <body>
-    <header>
-        <div id="logo">
-            <img src="" alt="LOGO">
-        </div>
-        <div id="nav-buttons">
-            <nav>
-                <p>nav</p>
-            </nav>
-        </div>
-        <div id="right-buttons">
-            <p>USER BUTTONS</p>
-        </div>
-    </header>
-    <main>
-        <div>
-            <p>HTML TEST</p>
-        </div>
-    </main>
+<header>
+    <div id="logo">
+        <img src="" alt="LOGO">
+    </div>
+    <div id="nav-buttons">
+        <nav>
+            <ul>
+                <li><a href="#">Joysticks</a></li>
+                <li hidden><a href="#">Sanwa</a></li>
+                <li hidden><a href="#">Seimitsu</a></li>
+                <li><a href="#">Buttons</a></li>
+                <li hidden><a href="#">Sanwa</a></li>
+                <li hidden><a href="#">Seimitsu</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+    </div>
+    <div id="right-buttons">
+        <ul>
+            <li><a href="#">Log in</a></li>
+            <li><a href="#">Shopping Bag</a></li>
+        </ul>
+    </div>
+</header>
+<main>
+    <div>
+        <p>$CONTENT$</p>
+    </div>
+</main>
 
-    <footer>
-        <p>COPYRIGHT</p>
-    </footer>
+<footer>
+    <p>COPYRIGHT</p>
+</footer>
 
 </body>
 </html>
