--- a/public/footerFile.html
+++ b/public/footerFile.html
@@ -2,7 +2,7 @@
 </main>
 <footer>
     <p>Copyright © 2020 ArcadeShop . All rights reserved.</p>
+    <p style="color: whitesmoke">*nota, els colors no seran aquests, ara mateix estan per poder veure les coses més facilment</p>
 </footer>
-
 </body>
 </html>
