--- a/public/footerFile.html
+++ b/public/footerFile.html
@@ -1,8 +1,17 @@
 
 </main>
+
 <footer>
-    <p>Copyright © 2020 ArcadeShop . All rights reserved.</p>
-    <p style="color: whitesmoke">*nota, els colors no seran aquests, ara mateix estan per poder veure les coses més facilment</p>
+    <div id="info">
+        <h4>Barcelona barcelona c\Barcelona nº barcelona 087Ba</h4>
+        <p>Location</p>
+        <p>Tel. +34 689543670</p>
+        <p>Email. +34 689543670</p>
+
+    </div>
+    <hr>
+    <p id="copyright">Copyright © 2020 ArcadeShop . All rights reserved.</p>
+<!--    <p style="color: whitesmoke">*nota, els colors no seran aquests, ara mateix estan per poder veure les coses més facilment</p>-->
 </footer>
 </body>
 </html>
