--- a/public/footerFile.html
+++ b/public/footerFile.html
@@ -3,8 +3,8 @@
 
 <footer>
     <div id="info">
-        <h4>Barcelona barcelona c\Barcelona nº barcelona 087Ba</h4>
-        <p>Location</p>
+        <h4>Location</h4>
+        <p>Barcelona barcelona c\Barcelona nº barcelona 087Ba</p>
         <p>Tel. +34 689543670</p>
         <p>Email. +34 689543670</p>
 
