--- a/public/headerFile.html
+++ b/public/headerFile.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <head>
     <link rel="stylesheet" href="css/main.css"/>
+<!--    <link rel="stylesheet" href="css/main_old.css"/>-->
     <link rel="stylesheet" media="screen and (max-width: 750px)" href="css/small.css" type="text/css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
