Ending pages, if time aviable, using database

--- a/format.html
+++ b/format.html
@@ -1,39 +1,47 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <link rel="stylesheet" href="css/main.css"/>
-<!--    <link rel="stylesheet" href="css/main_old.css"/>-->
-    <link rel="stylesheet" media="screen and (max-width: 750px)" href="css/small.css" type="text/css">
+    <link rel="stylesheet" href="public/css/main.css"/>
+    <link rel="stylesheet" media="screen and (max-width: 800px)" href="public/css/small.css" type="text/css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ArcadeShop</title>
 </head>
+<!--OLD VERSION-->
 <body>
     <header>
         <div id="logo">
-            <a href="index.php">
-            <img src="src/logo.png" alt="LOGO">
-            </a>
+            <img src="public/src/logo.png" alt="LOGO">
         </div>
         <div id="nav-buttons">
             <nav>
                 <ul>
-                    <li><a href="joysticks.php">Joysticks</a></li>
+                    <li><a href="#">Joysticks</a></li>
                         <li hidden><a href="#">Sanwa</a></li>
                         <li hidden><a href="#">Seimitsu</a></li>
-                    <li><a href="buttons.php">Buttons</a></li>
+                    <li><a href="#">Buttons</a></li>
                         <li hidden><a href="#">Sanwa</a></li>
                         <li hidden><a href="#">Seimitsu</a></li>
-                    <li><a href="contact.php">Contact</a></li>
+                    <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
         </div>
         <div id="right-buttons">
             <ul>
-                <li><a href="login.php">Log in</a></li>
+                <li><a href="#">Log in</a></li>
                 <li hidden><a href="#">Log out</a></li>
-                <li><a href="cart.php">Shopping Cart</a></li>
+                <li><a href="#">Shopping Cart</a></li>
             </ul>
         </div>
     </header>
     <main>
+        <div>
+            !CONTENT!
+        </div>
+    </main>
+    <footer>
+        <p>Copyright © 2020 ArcadeShop . All rights reserved.</p>
+    </footer>
+
+</body>
+</html>
