--- a/format/footerFile.html
+++ b/format/footerFile.html
@@ -6,7 +6,7 @@
         <h4>Location</h4>
         <p>Barcelona barcelona c\Barcelona nº barcelona 087Ba</p>
         <p>Tel. +34 689543670</p>
-        <p>Email. +34 689543670</p>
+        <p>Email: <a href='mailto:arcadeshop_bcn@gmail.com'>arcadeshop_bcn@gmail.com</a></p>
 
     </div>
     <hr>
