--- a/format/footerFile.html
+++ b/format/footerFile.html
@@ -5,12 +5,12 @@
     <div id="info">
         <h4>Location</h4>
         <p>Barcelona barcelona c\Barcelona nº barcelona 087Ba</p>
-        <p>Tel. +34 689543670</p>
-        <p>Email: <a href='mailto:arcadeshop_bcn@gmail.com'>arcadeshop_bcn@gmail.com</a></p>
+<!--        <p>Tel. +34 689543670</p>-->
+<!--        <p>E-mail: <a href='mailto:arcadeshop_bcn@gmail.com'>arcadeshop_bcn@gmail.com</a></p>-->
 
     </div>
     <hr>
-    <p id="copyright">Copyright © 2020 ArcadeShop . All rights reserved.</p>
+    <p id="copyright">Copyright © 2020 ArcadeShop. All rights reserved.</p>
 <!--    <p style="color: whitesmoke">*nota, els colors no seran aquests, ara mateix estan per poder veure les coses més facilment</p>-->
 </footer>
 </body>
