--- a/volumes/filterweb/private/format.html
+++ b/volumes/filterweb/private/format.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <link rel="stylesheet" href="public/css/main.css"/>
-    <link rel="stylesheet" media="screen and (max-width: 800px)" href="public/css/small.css" type="text/css">
+    <link rel="stylesheet" href="../public/css/main.css"/>
+    <link rel="stylesheet" media="screen and (max-width: 800px)" href="../public/css/small.css" type="text/css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ArcadeShop</title>
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div id="logo">
-            <img src="public/src/logo.png" alt="LOGO">
+            <img src="../public/src/logo.png" alt="LOGO">
         </div>
         <div id="nav-buttons">
             <nav>
