--- a/volumes/filterweb/private/format.html
+++ b/volumes/filterweb/private/format.html
@@ -1,8 +1,10 @@
+<!-- UNUSED -->
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <link rel="stylesheet" href="../public/css/main.css"/>
-    <link rel="stylesheet" media="screen and (max-width: 800px)" href="../public/css/small.css" type="text/css">
+    <link rel="stylesheet" href="../public/src/css/main.css"/>
+    <link rel="stylesheet" media="screen and (max-width: 800px)" href="../public/src/css/small.css" type="text/css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ArcadeShop</title>
@@ -42,6 +44,5 @@
     <footer>
         <p>Copyright © 2020 ArcadeShop . All rights reserved.</p>
     </footer>
-
 </body>
 </html>
